# convnet_fft

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  convnet_fft.cu  convnet_fft.cuh
